Added Swift Tool Setup Command

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,8 +15,14 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Setup Swift
+      uses: SwiftyLab/setup-swift@latest
+    
     - name: Build
       run: swift build -v
+      
     - name: Run tests
       run: swift test -v
